# Cargo.toml

[package]
name = "alprog"
version = "0.1.0"
edition = "2021" # Disetel ke 2021, karena 2024 belum stabil/ada

[dependencies]
eframe = "0.31.1" # Versi ini lebih umum dan stabil
egui = "0.31.1" # Sesuaikan dengan eframe
egui_plot = "0.32.1" # Sesuaikan dengan egui (seringkali egui_plot lebih rendah sedikit)
rand = { version = "0.9.1", features = ["std"] } # Menggunakan versi 0.8.5 yang stabil dan umum
                                                # Jika Anda ingin 0.9.1, pastikan itu kompatibel
                                                # dengan semua dependensi lainnya.
mongodb = "3.2.3" # Menggunakan versi yang sebelumnya kita pakai dan berfungsi
tokio = { version = "1", features = ["full"] }
chrono = "0.4"
futures = "0.3"
serialport = "4.2.0" # Menggunakan versi yang sebelumnya kita pakai dan berfungsi
bson = { version = "2.8.0", features = ["chrono-0_4"] } # Versi bson yang sesuai dengan mongodb 2.8.0 dan chrono
serde = { version = "1.0", features = ["derive"] }

# Bagian [patch.crates-io] dihapus/dikomentari sesuai permintaan
# [patch.crates-io]
# rand = { version = "0.9.1", features = ["std"] }

# Pastikan bagian features ini ada jika Anda menggunakan #[cfg(feature = "serde")]
[features]
serde = []