[package]
name = "alprog"
version = "0.1.0"
edition = "2021" 

[dependencies]
eframe = "0.31.1" 
egui = "0.31.1" 
egui_plot = "0.32.1" 
rand = { version = "0.9.1", features = ["std"] } 
mongodb = "3.2.3" 
tokio = { version = "1", features = ["full"] }
chrono = "0.4"
futures = "0.3"
serialport = "4.2.0" 
bson = { version = "2.8.0", features = ["chrono-0_4"] } 
serde = { version = "1.0", features = ["derive"] }

[features]
serde = []
